# perspective_viewer

./: CMakeLists.txt  README.md
resources/: default.fs  default.vs
src/: main.cpp
src/app/: CMakeLists.txt
src/app/implements/: App.cpp  RenderObject.cpp  SceneView.cpp  Texture.cpp
src/app/include/: App.hpp  RenderObject.hpp  SceneView.hpp  Texture.hpp
src/core/: CMakeLists.txt
src/core/include/: StrongString.hpp  UuidGenerator.hpp  mtools.hpp
src/render/gles/: CMakeLists.txt
src/render/gles/implements/: GLRenderer.cpp  GLShader.cpp  GLShaderProgram.cpp
src/render/gles/include/: GLRenderer.hpp  GLShader.hpp  GLShaderProgram.hpp  GLUtils.hpp
src/render/render_interface/: CMakeLists.txt
src/render/render_interface/include/: CameraDesc.hpp  DrawItemDesc.hpp  FrameDesc.hpp  IRenderer.hpp
src/scene/: CMakeLists.txt
src/scene/implements/: AssetStore.cpp  Camera.cpp  Geometry.cpp  Material.cpp  Node.cpp  Renderable.cpp  Scene.cpp  SceneController.cpp  Stage.cpp  Technic.cpp  Transform.cpp
src/scene/include/: AssetStore.hpp  Camera.hpp  Geometry.hpp  Material.hpp  Node.hpp  Renderable.hpp  Scene.hpp  SceneController.hpp  SceneTypes.hpp  Stage.hpp  Technic.hpp  Transform.hpp
src/view/: CMakeLists.txt
src/view/implements/: Describer.cpp
src/view/includes/: Describer.hpp
tests/scene/: CMakeLists.txt  scene_test.cpp  test_node.cpp
